--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="style.css">
-     <script src="script.js"></script>
+
     <title>Conversor de Moeda</title>
 
 </head>
@@ -34,7 +34,7 @@
     </label>
     <label>
         Valor
-        <input placeholder="$ 000.000.000">
+        <input class="input-currency" placeholder="$ 000.000.000">
     </label>
     <button class="convert-button"> converter </button>
 
@@ -62,5 +62,5 @@
     </section>
 </main>
 </body>
-
+<script src="script.js"></script>
 </html>
