--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
     <label>
         Converter <b>para</b>    
-        <select>
-            <option> US$ Dollar Americano</option>
-            <option> € Euro</option>
-            <option> £ Libra</option>
+        <select class="currency-select">
+            <option value="dollar"> US$ Dollar Americano</option>
+            <option value="euro"> € Euro</option>
+            <option value="libra"> £ Libra</option>
         </select>
     </label>
     <label>
@@ -43,7 +43,7 @@
             <img src="/assets/brasil.png" alt=" logo-moeda-a-converter">
 
             <p class="currency"> Real</p>
-            <p class="currency-value"> $ 0,00</p>
+            <p class="currency-value-to-convert"> $ 0,00</p>
 
         </div>
 
