falta arrumar as imagens

--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 
         <div class=" currency-box">
 
-            <img src="/assets/estados-unidos (1) 1.png" alt=" logo-moeda-a-convertida">
+            <img class="currency-img" src="./assets/estados-unidos .png" alt=" logo-moeda-a-convertida">
 
-            <p  class="currency"> Dollar</p>
+            <p  class="currency" id="currency-name"> Dollar</p>
 
             <p class="currency-value"> US$ 0,00</p>
 
         </div>
+      
 
     </section>
 </main>
