--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Valor
         <input class="input-currency" placeholder="$ 000.000.000">
     </label>
-    <button class="convert-button"> converter </button>
+    <button class="convert-button"> Converter </button>
 
     <section>
         <div class=" currency-box">
