--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
- <img class=" logo"  src="./assets/logoConversor.gif" alt="logo do Conversor">
+ <img class=" logo"  src="./assets/logoazul.gif" alt="logo do Conversor">
 
  <main>
     <label>
@@ -27,7 +27,7 @@
     <label>
         Converter <b>para</b>    
         <select class="currency-select">
-            <option value="dollar"> US$ Dollar Americano</option>
+            <option value="dollar"> US$ Dólar Americano</option>
             <option value="euro"> € Euro</option>
             <option value="libra"> £ Libra</option>
         </select>
